--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -233,18 +233,18 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="wrap">api/medicament/activeingredient/?ingredientname=zinc</span></td>
+                                    <td><span class="wrap">api/medicament/activeingredient/?ingredientname=</span></td>
                                     <td>Affiche les ingrédients actifs qui contiennent zinc dans leur nom.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
-                                            <li><code>zinc</code>&nbsp;- %ZINC% - nom d'ingrédient avec zinc dans leur nom</li>
+                                            <li><code>ex. zinc</code>&nbsp;- %ZINC% - nom d'ingrédient avec zinc dans leur nom</li>
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais par défaut tout est affiché.</td>
                                     <td>Détermine si le résultat est affiché selon un nom d'ingrédient spécifique.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/activeingredient/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/activeingredient/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -256,7 +256,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/activeingredient/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/activeingredient/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -402,7 +402,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/company/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/company/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -414,7 +414,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/company/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/company/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -564,18 +564,18 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="wrap">api/medicament/drugproduct/?brandname=CIDYL</span></td>
+                                    <td><span class="wrap">api/medicament/drugproduct/?brandname=</span></td>
                                     <td>Affiche les produit pharmaceutiques qui contiennent cidyl dans leur nom commercial.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
-                                            <li><code>cidyl</code>&nbsp;- %CIDYL% - produit pharmaceutique avec cidyl dans le nom commercial </li>
+                                            <li><code>ex. cidyl</code>&nbsp;- %CIDYL% - produit pharmaceutique avec cidyl dans le nom commercial </li>
                                         </ul>
                                     </td>
                                     <td><strong>No</strong>, mais par défaut tout est affiché.</td>
                                     <td>Détermine si le résultat est affiché selon un nom commercial spécifique.</td>
                                 </tr>                                      
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/drugproduct/?status=1</span></td>
+                                    <td><span class="nowrap">api/medicament/drugproduct/?status=</span></td>
                                     <td>Affiche les produits pharmaceutiques selon l'état spécifié dans la requête.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -584,14 +584,15 @@
                                             <li><code>3</code>&nbsp;- Annulé avant commercialisation</li>
                                             <li><code>4</code>&nbsp;- Annulé après commercialisation</li>
                                             <li><code>6</code>&nbsp;- Dormant</li>
-                                            <li><code>9</code>&nbsp;- Annulé (notification annuelle omise)</li>                                            
+                                            <li><code>9</code>&nbsp;- Annulé (notification annuelle omise)</li> 
+                                            <li><code>10</code>&nbsp;- Annulé (problème d'innocuité)</li>                                             
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais par défaut tout est affiché.</td>
                                     <td>Détermine si le résultat est affiché selon un état spécifique.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/drugproduct/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/drugproduct/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -603,7 +604,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/drugproduct/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/drugproduct/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -736,7 +737,7 @@
                                     <td></td>
                                 </tr>                                
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/form/?active=yes</span></td>
+                                    <td><span class="nowrap">api/medicament/form/?active=</span></td>
                                     <td>Affiche les formes posologiques qui sont actives.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
@@ -748,7 +749,7 @@
                                     <td>Détermine si le résultat retourne toutes les formes posologiques des produits ou seulement celles dont la date est plus grande que la date d'aujourd'hui ou pas de date.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/form/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/form/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -760,7 +761,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/form/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/form/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -872,7 +873,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/packaging/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/packaging/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -994,7 +995,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="wrap">api/medicament/pharmaceuticalstd/?type=json</span></td>
+                                    <td><span class="wrap">api/medicament/pharmaceuticalstd/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1101,7 +1102,7 @@
                                     <td></td>
                                 </tr>                                
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/route/?active=yes</span></td>
+                                    <td><span class="nowrap">api/medicament/route/?active=</span></td>
                                     <td>Affiche les voies d'administration qui sont actives.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
@@ -1112,7 +1113,7 @@
                                     <td>Détermine si le résultat retourne toutes les voies d'administration ou seulement celles dont la date est plus grande que la date d'aujourd'hui ou pas de date.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/route/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/route/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1124,7 +1125,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/route/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/route/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1256,7 +1257,7 @@
                                     <td></td>
                                 </tr>                               
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/schedule/?active=yes</span></td>
+                                    <td><span class="nowrap">api/medicament/schedule/?active=</span></td>
                                     <td>Affiche les annexes qui sont actives.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 wrap">
@@ -1268,7 +1269,7 @@
                                     <td>Détermine si le résultat retourne toutes les annexes ou seulement celles dont la date est plus grande que la date d'aujourd'hui ou pas de date.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/schedule/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/schedule/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1280,7 +1281,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/schedule/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/schedule/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1396,7 +1397,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/status/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/status/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1408,7 +1409,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/status/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/status/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1535,7 +1536,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/therapeuticclass/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/therapeuticclass/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1547,7 +1548,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/therapeuticclass/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/therapeuticclass/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1667,7 +1668,7 @@
                                     <td></td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/veterinaryspecies/?lang=fr</span></td>
+                                    <td><span class="nowrap">api/medicament/veterinaryspecies/?lang=</span></td>
                                     <td>Modifie la langue du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
@@ -1679,7 +1680,7 @@
                                     <td>Détermine si le résultat est affiché en anglais ou en français.</td>
                                 </tr>
                                 <tr>
-                                    <td><span class="nowrap">api/medicament/veterinaryspecies/?type=json</span></td>
+                                    <td><span class="nowrap">api/medicament/veterinaryspecies/?type=</span></td>
                                     <td>Modifie le format du résultat.</td>
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
