updates of lnhpd documentation by Jocelyne

--- a/APIDocumentation/lnhpd-documentation-fr.html
+++ b/APIDocumentation/lnhpd-documentation-fr.html
@@ -972,10 +972,12 @@
                                     <td><strong>date_start</strong></td>
                                     <td>Date à laquelle le processus a débuté.</td>
                                 </tr>
+                                <!-- Took off July 13
                                 <tr>
                                     <td><strong>notes</strong></td>
                                     <td>Texte libre.</td>
                                 </tr>
+                                 -->
                                 <tr>
                                     <td><strong>product_name_id</strong></td>
                                     <td>Identificateur de valeur clé pour nom de marque.</td>
@@ -1025,8 +1027,7 @@
                         <section>
                              <h3 id="a7.3">Exemple de résultat </h3>
                              <pre class="prettify prettyprint linenums">{"lnhpd_id":3894930,"licence_number":"02096870","licence_date":"2004-10-15","revised_date":null,"time_receipt":"2004-01-13",
-    "date_start":"2004-01-19","notes":"See file OF2-31-3-10152-1 Company general file for heavy metals testing. LC","product_name_id":170030,
-    "product_name":"Primanol","dosage_form":"Capsule","company_id":10152,"company_name_id":9141709,"company_name":"Jamieson Laboratories Ltd.",
+    "date_start":"2004-01-19","product_name_id":170030,"product_name":"Primanol","dosage_form":"Capsule","company_id":10152,"company_name_id":9141709,"company_name":"Jamieson Laboratories Ltd.",
     "sub_submission_type_code":5,"sub_submission_type_desc":"DIN de transition","flag_primary_name":1,"flag_product_status":1,"flag_attested_monograph":0}</pre>
                         </section>
                         <section>
